[package]
name = "uunit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.15"
typenum = "1.17.0"

[features]
default = ["si_giga", "si_mega", "si_kilo", "si_centi", "si_milli", "si_milli", "si_micro", "si_nano"]
si_quetta = []
si_ronna = []
si_yotta = []
si_zetta = []
si_exa = []
si_peta = []
si_tera = []
si_giga = []
si_mega = []
si_kilo = []
si_hecto = []
si_deca = []
si_deci = []
si_centi = []
si_milli = []
si_micro = []
si_nano = []
si_pico = []
si_femto = []
si_atto = []
si_zepto = []
si_yocto = []
si_ronto = []
si_quecto = []